--- a/maths IQ Game/index-style.css
+++ b/maths IQ Game/index-style.css
@@ -138,7 +138,7 @@ body{
     align-items : center ;
     background : #FFF ;
 }
-/* #madeby{
+#madeby{
     position: fixed;
     bottom: 0px;
     right: 10px;
@@ -146,4 +146,4 @@ body{
     padding: 2px 10px;
     border-radius: 4px;
     background-color: black;
-} */
+}
